# rendering-engine

./: .gitignore  Cargo.toml  rustfmt.toml
ecs/: Cargo.toml
ecs/benches/: iter.rs
ecs/src/: archetype.rs  component.rs  entity.rs  lib.rs  system.rs  world.rs
engine/: Cargo.toml
engine/src/: camera.rs  components.rs  context.rs  engine.rs  input.rs  main.rs  math.rs  renderer.rs  util.rs
engine/src/graphics/: buffer.rs  framebuffer.rs  graphics.rs  image.rs  mod.rs  shader.rs  state.rs  texture.rs
engine/src/graphics/opengl/: buffer.rs  framebuffer.rs  mod.rs  opengl.rs  shader.rs  state.rs  texture.rs
engine/src/input/: input.rs
engine/src/math/: mat4f.rs  math.rs  mod.rs  tests.rs  vec2f.rs  vec2u.rs  vec3f.rs  vec4f.rs
engine/src/memory_manager/: buffer.rs  memory_manager.rs  mod.rs  uniform_layouts.rs
engine/src/platform/: mod.rs
engine/src/platform/rustgl/: gl46.rs  mod.rs  rustgl.rs
engine/src/renderer/: _cube.rs  asset.rs  buffer.rs  camera.rs  command.rs  mod.rs  pipeline.rs  renderer.rs  state.rs  uniform_layouts.rs
engine/src/renderer/asset/: model.rs  shader.rs  texture.rs
engine/src/renderer/pipeline_stages/: ao.rs  bloom.rs  debug.rs  depth.rs  mod.rs  post_process.rs  scene.rs  shadow.rs  sky.rs
engine/src/resource_manager/: framebuffer.rs  gl_image.rs  loader.rs  mod.rs  model.rs  prefabs.rs  resource_manager.rs  shader.rs  texture.rs
res/shaders/: basic.glsl  bloom_downsample.glsl  bloom_upsample.glsl  cube_shadow_map.glsl  debug.glsl  debug_vertices.glsl  debug_wireframe.glsl  depth_only.glsl  dir_shadow_map.glsl  light.glsl  (+5 more)
(+13 files in other folders)
