[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["opengl"]
opengl = []

[dependencies]
log = {version = "0.4", features = ["max_level_trace", "release_max_level_error"]}
colored = "2"
glutin = "0.28.0"
spin_sleep = "1.1.1"
bytemuck = "1.12.3"
image = "0.24.5"
tobj = "3.2.3"
ecs = {path = "../ecs"}
memoffset = {version = "0.7", features = ["unstable_const"]}
nohash-hasher = "0.2.0"